// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a closed dropdown 1`] = `
<DropdownMenu
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      aria-owns={null}
      className="css-b0z14z"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-0-label"
            id="downshift-0-menu"
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-0"
                index={0}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-1"
                index={1}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-2"
                index={2}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-3"
                index={3}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        isOpen={false}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="open menu"
            className="css-1m1ecn3"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;

exports[`Dropdown renders a dropdown with a max height 1`] = `
<DropdownMenu
  menuMaxHeight={50}
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      aria-owns={null}
      className="css-b0z14z"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-2-label"
            id="downshift-2-menu"
            maxHeight={50}
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-0"
                index={0}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-1"
                index={1}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-2"
                index={2}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-3"
                index={3}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        isOpen={false}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="open menu"
            className="css-1m1ecn3"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;

exports[`Dropdown renders an open dropdown 1`] = `
<DropdownMenu
  initialIsOpen={true}
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialIsOpen={true}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns="downshift-1-menu"
      className="css-b0z14z"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-1-label"
            id="downshift-1-menu"
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-0"
                index={0}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-1"
                index={1}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-2"
                index={2}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-3"
                index={3}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        isOpen={true}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="close menu"
            className="css-1m1ecn3"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
        <clickOutside(DropdownContents)
          isOpen={true}
        >
          <DropdownContents
            isOpen={true}
          >
            <ForwardRef
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Overlay
                innerRef={[Function]}
                overlayRoot={
                  <body>
                    <div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-1-label"
                          class="css-1uapjdz"
                          data-cy="popover"
                          id="downshift-1-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                            <div
                              aria-selected="false"
                              class="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </body>
                }
                style={
                  Object {
                    "left": "0",
                    "position": "absolute",
                    "top": "0",
                    "zIndex": 2,
                  }
                }
              >
                <Portal
                  containerInfo={
                    <div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-1-label"
                          class="css-1uapjdz"
                          data-cy="popover"
                          id="downshift-1-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                            <div
                              aria-selected="false"
                              class="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    style={
                      Object {
                        "left": "0",
                        "position": "absolute",
                        "top": "0",
                        "zIndex": 2,
                      }
                    }
                  >
                    <Popover
                      aria-labelledby="downshift-1-label"
                      id="downshift-1-menu"
                      menuRef={[Function]}
                      role="listbox"
                    >
                      <div
                        aria-labelledby="downshift-1-label"
                        className="css-1uapjdz"
                        data-cy="popover"
                        id="downshift-1-menu"
                        role="listbox"
                        style={
                          Object {
                            "maxHeight": undefined,
                            "maxWidth": undefined,
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className=""
                          key="dropdown-0"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-0"
                            index={0}
                            isActive={false}
                            key=".$edit"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Edit
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-1"
                            index={1}
                            isActive={false}
                            key=".$scale"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Scale
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-2"
                            index={2}
                            isActive={false}
                            key=".$restart"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Restart
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-3"
                            index={3}
                            isActive={false}
                            key=".$stop"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Stop
                            </div>
                          </PopoverListItem>
                        </div>
                      </div>
                    </Popover>
                  </div>
                </Portal>
              </Overlay>
            </ForwardRef>
          </DropdownContents>
        </clickOutside(DropdownContents)>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;

exports[`Dropdown renders an open dropdown with multiple sections 1`] = `
<DropdownMenu
  initialIsOpen={true}
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialIsOpen={true}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label"
      aria-owns="downshift-3-menu"
      className="css-b0z14z"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-3-label"
            id="downshift-3-menu"
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-0"
                index={0}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-1"
                index={1}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
            <div
              className="css-fqgy4m"
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-2"
                index={0}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-3"
                index={1}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restartDelay"
                >
                  Restart Delay
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
            <div
              className="css-fqgy4m"
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-4"
                index={0}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="pause"
                >
                  Pause
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-5"
                index={1}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        isOpen={true}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="close menu"
            className="css-1m1ecn3"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
        <clickOutside(DropdownContents)
          isOpen={true}
        >
          <DropdownContents
            isOpen={true}
          >
            <ForwardRef
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Overlay
                innerRef={[Function]}
                overlayRoot={
                  <body>
                    <div>
                      <div
                        data-popper-escaped="true"
                        data-popper-placement="bottom-end"
                        data-popper-reference-hidden="true"
                        style="z-index: 2; position: absolute; left: 0px; top: 0px; visibility: hidden; pointer-events: none; right: 0px; transform: translate(0px, 0px);"
                      >
                        <div
                          aria-labelledby="downshift-1-label"
                          class="css-1uapjdz"
                          data-cy="popover"
                          id="downshift-1-menu"
                          role="listbox"
                          style="overflow: auto;"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                            <div
                              aria-selected="false"
                              class="css-1j6n8hw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-3-label"
                          class="css-1uapjdz"
                          data-cy="popover"
                          id="downshift-3-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                          </div>
                          <div
                            class="css-fqgy4m"
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-3"
                              role="option"
                            >
                              Restart Delay
                            </div>
                          </div>
                          <div
                            class="css-fqgy4m"
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-4"
                              role="option"
                            >
                              Pause
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-5"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </body>
                }
                style={
                  Object {
                    "left": "0",
                    "position": "absolute",
                    "top": "0",
                    "zIndex": 2,
                  }
                }
              >
                <Portal
                  containerInfo={
                    <div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-3-label"
                          class="css-1uapjdz"
                          data-cy="popover"
                          id="downshift-3-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                          </div>
                          <div
                            class="css-fqgy4m"
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-3"
                              role="option"
                            >
                              Restart Delay
                            </div>
                          </div>
                          <div
                            class="css-fqgy4m"
                          >
                            <div
                              aria-selected="false"
                              class="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-4"
                              role="option"
                            >
                              Pause
                            </div>
                            <div
                              aria-selected="false"
                              class="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-5"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    style={
                      Object {
                        "left": "0",
                        "position": "absolute",
                        "top": "0",
                        "zIndex": 2,
                      }
                    }
                  >
                    <Popover
                      aria-labelledby="downshift-3-label"
                      id="downshift-3-menu"
                      menuRef={[Function]}
                      role="listbox"
                    >
                      <div
                        aria-labelledby="downshift-3-label"
                        className="css-1uapjdz"
                        data-cy="popover"
                        id="downshift-3-menu"
                        role="listbox"
                        style={
                          Object {
                            "maxHeight": undefined,
                            "maxWidth": undefined,
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className=""
                          key="dropdown-0"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-0"
                            index={0}
                            isActive={false}
                            key=".$edit"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-0"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Edit
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-1"
                            index={1}
                            isActive={false}
                            key=".$scale"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-1"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Scale
                            </div>
                          </PopoverListItem>
                        </div>
                        <div
                          className="css-fqgy4m"
                          key="dropdown-1"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-2"
                            index={0}
                            isActive={false}
                            key=".$restart"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-2"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Restart
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-3"
                            index={1}
                            isActive={false}
                            key=".$restartDelay"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-3"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Restart Delay
                            </div>
                          </PopoverListItem>
                        </div>
                        <div
                          className="css-fqgy4m"
                          key="dropdown-2"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-4"
                            index={0}
                            isActive={false}
                            key=".$pause"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-1uile0g"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-4"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Pause
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-5"
                            index={1}
                            isActive={false}
                            key=".$stop"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="css-35mrzw"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-5"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Stop
                            </div>
                          </PopoverListItem>
                        </div>
                      </div>
                    </Popover>
                  </div>
                </Portal>
              </Overlay>
            </ForwardRef>
          </DropdownContents>
        </clickOutside(DropdownContents)>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;
